--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,15 @@ edition = "2021"
 
 [dependencies]
 
+[profile.dev]
+panic = "abort"
+
 [profile.release]
 strip = true  # Automatically strip symbols from the binary.
 opt-level = "z"  # Optimize for size.
 lto = true
 codegen-units = 1
 panic = "abort"
+
+[target.'cfg(all())']
 
