--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,5 @@ opt-level = "z"  # Optimize for size.
 lto = true
 codegen-units = 1
 panic = "abort"
-
-[target.'cfg(all())']
+overflow-checks = false
 
